# backend/app/helper/schema.py
@@ -70,13 +70,8 @@ class ScoreSchema(ma.Schema):
     student_name= fields.String(required=True)
     score=fields.Integer(blank=True, null=True)
 
-class Create_announcementSchema(ma.Schema):
-    id = fields.String(dump_only=True)
-    grade_announcement = fields.Integer(blank=True, null=True)
-    courses_announcement = fields.String(required=True)
-    description = fields.String(required=False)
+class AnnouncementSchema(ma.Schema):
+    content_announcement = fields.String(required=True)
+    calender_announcement = fields.Date(required=True)
+    description = fields.String(required=True)
 
-class View_announcementSchema(ma.Schema):
-    id = fields.String(dump_only=True)
-    grade_announcement = fields.Integer(blank=True, null=True)
-    courses_announcement = fields.String(required=True)
